[package]
name = "bigbed"
version = "0.1.3"
authors = ["William Owens <wowens@ufl.edu>"]
edition = "2018"
license = "GPL-3.0"
description = """
A crate for dealing with BigBed files.
"""

[dependencies]
flate2 = "1.0.13"
clap = { version = "2.33.0", optional = true }

[lib]
name = "bigbed"
path = "src/lib.rs"

[features]
binary = ["clap"]

[[bin]]
name = "rbb"
required-features = ["binary"]
path = "src/bin.rs"
